# strawchemy-migration-project

./: .gitignore  README.md
schemas/strawberry-sqlalchemy-mapper/: main.graphql  polymorphic.graphql  relay.graphql
schemas/strawchemy/: child-pagination.graphql  filters.graphql  main.graphql  mutations.graphql  ordering.graphql  pagination.graphql  relationship-aggregations.graphql  root-aggregations.graphql
strawberry-sqlalchemy-project/: README.md  app.py  models.py  pyproject.toml  schema.py  schema_polymorphic.py  schema_relay.py
strawberry-sqlalchemy-project/tests/: conftest.py  test_queries.py  test_schema.py
strawberry-sqlalchemy-project/tests/specific_features/: __init__.py  test_relay.py
strawchemy-migrated-project/: README.md  app.py  database.py  pyproject.toml  schema.py  schema_aggregations.py  schema_filters.py  schema_mutations.py  schema_ordering.py  schema_pagination.py
strawchemy-migrated-project/tests/: conftest.py  test_queries.py  test_schema.py
strawchemy-migrated-project/tests/specific_features/: __init__.py  test_filtering.py  test_ordering.py
utils/: generate_schemas.py  generate_strawberry_sqlalchemy_mapper.py  generate_strawchemy.py
